--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -310,7 +310,7 @@
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header text-center h4" style="background-color: #e0e8f9;">
-                        Summarized Chat
+                        Chat Review
                         <button type="button" class="close btn p-0" data-bs-dismiss="modal" aria-label="Close">
                             <i class="bi bi-x h4"></i>
                         </button>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="modal-footer justify-content-center">
                         <button type="button" id="btn-summarize_again"
-                            class="w-25 btn btn-summary rounded-pill">Summarize Again</button>
+                            class="w-25 btn btn-summary" data-bs-dismiss="modal">Close</button>
                         <!-- <button type="button" class="btn btn-summary rounded-pill" data-bs-dismiss="modal">Close</button> -->
                     </div>
                 </div>
