--- a/learneng_vite/welcome.html
+++ b/learneng_vite/welcome.html
@@ -95,8 +95,8 @@
 
     <div class="circle-buttons-container">
         <div class="circle-buttons">
-            <a href="editor_scenario_page.html">
-                <img src="/page_photo/teacher2.png" alt="Teacher">
+            <a href="editor-login.html">
+                <img src="page_photo/teacher.png" alt="Teacher">
                 <span>Teacher</span>
             </a>
             <a href="home.html">
