--- a/learneng_vite/scenario_page.html
+++ b/learneng_vite/scenario_page.html
@@ -210,49 +210,30 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
-    // Function to get query parameter from URL
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
-
     async function fetchScenarios() {
       try {
-        // Get levelId from URL
-        const levelId = getQueryParam('level');
-
-        // Fetch level information only if levelId is not null
-        let levelName = "";
-        if (levelId) {
-          const levelResponse = await fetch(`http://127.0.0.1:5000/level/${levelId}`);
-          if (!levelResponse.ok) {
-            throw new Error("Failed to fetch level");
-          }
-          const level = await levelResponse.json();
-          levelName = level.name;
-          console.log(levelName)
-          // Update level-indicator text
-          document.getElementById('levelIndicator').innerText = levelName;
-        }
-
-        const response = await fetch(`http://127.0.0.1:5000/scenario?level=${levelId}`);
-
+        const response = await fetch('http://127.0.0.1:5000/scenario/');
         if (!response.ok) {
           throw new Error("Failed to fetch scenarios");
         }
 
+        // all scenarios returned here
         const scenarios = await response.json();
-        const container = document.getElementById('scenarios');
-        let count = 0;
 
+        const container = document.getElementById('scenarios');
+        let count = 0
         scenarios.forEach(scenario => {
-          count++;
+          count = count +1;
           const div = document.createElement('div');
           div.classList.add(`scenario-card`);
 
+          const scenarioImageSrc = scenario.scenarioImage
+                            ? `data:${scenario.scenarioImageType};base64,${scenario.scenarioImage}`
+                            : "background/null.png";
+
           div.innerHTML =
-            `<div class="number">${count}</div>` +
-            `<img src="page_photo/${scenario.image}" alt="${scenario.image}">` +
+            `<div class="number">${count}</div>` + 
+            `<img src="${scenarioImageSrc}" alt="${scenario.image}">` +
             `<h3>${scenario.name}</h3>` +
             `<p>${scenario.scenarioDesc}</p>` +
             `<a href="chatting.html?id=${scenario.id}"> <button onclick="startChat()">Start</button> </a>`;
