--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -282,7 +282,7 @@
         <div class="left-panel col-6">
             <!-- AI Character -->
             <div id="root" class="h-100 w-100"></div>
-            <div class="ai-name">Joseph</div>
+            <div class="ai-name">Character</div>
             <!-- <div class="ai-description">Description</div> -->
         </div>
 
