--- a/learneng_vite/editor_scenario_page.html
+++ b/learneng_vite/editor_scenario_page.html
@@ -13,21 +13,28 @@
     <style>
         .card img {
             object-fit: cover;
-            height: 200px; /* Fix the height for consistent image size */
+            height: 200px;
+            /* Fix the height for consistent image size */
         }
+
         .card-body {
             padding: 15px;
         }
+
         .card-title {
             font-size: 1.25rem;
             font-weight: 600;
-            min-height: 50px; /* Ensure consistent title height */
+            min-height: 50px;
+            /* Ensure consistent title height */
         }
+
         .card-text {
-            min-height: 80px; /* Make sure description text height is consistent */
+            min-height: 80px;
+            /* Make sure description text height is consistent */
             font-size: 1rem;
             color: #555;
         }
+
         .card {
             display: flex;
             flex-direction: column;
@@ -40,6 +47,7 @@
 <body>
     <nav class="editor-header navbar navbar-expand-lg navbar-light px-3 py-2">
         <div class="d-flex justify-content-end w-100">
+            <a id="exit" href="/" class="btn btn-head-primary me-3">Exit Configuration</a>
             <button id="logoutButton" class="btn btn-outline-danger">Logout</button>
         </div>
     </nav>
@@ -61,108 +69,132 @@
         </div>
         <p class="col-12 lead w-100 text-center mt-5 d-none" id="no-scenario">———— &nbsp;&nbsp; No scenarios available
             &nbsp;&nbsp; ————</p>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
-        <script>
-            async function fetchScenarios() {
-                try {
-                    const response = await fetch('http://127.0.0.1:5000/scenario/');
-                    if (!response.ok) {
-                        throw new Error("Failed to fetch scenarios");
-                    }
+    <script>
+        async function fetchScenarios() {
+            try {
+                const response = await fetch('http://127.0.0.1:5000/scenario/');
+                if (!response.ok) {
+                    throw new Error("Failed to fetch scenarios");
+                }
 
-                    const scenarios = await response.json();
+                const scenarios = await response.json();
 
-                    // Example: Add them to a div
-                    const container = document.getElementById('scenarios');
-                    scenarios.forEach(scenario => {
-                        const div = document.createElement('div');
-                        div.classList.add(`levelClass`, `level-${scenario.level}`, `d-none`, 'card', 'mx-3', 'mb-4');
-                        div.style.width = "300px";
+                // Example: Add them to a div
+                const container = document.getElementById('scenarios');
+                scenarios.forEach(scenario => {
+                    const div = document.createElement('div');
+                    div.classList.add(`levelClass`, `level-${scenario.level}`, `d-none`, 'card', 'mx-3', 'mb-4');
+                    div.style.width = "300px";
 
-                        const scenarioImageSrc = scenario.scenarioImage
-                            ? `data:${scenario.scenarioImageType};base64,${scenario.scenarioImage}`
-                            : "background/null.png";
+                    const scenarioImageSrc = scenario.scenarioImage
+                        ? `data:${scenario.scenarioImageType};base64,${scenario.scenarioImage}`
+                        : "background/null.png";
 
-                            div.innerHTML =
-                                `<div class="card-body">` +
-                                `<img id="scenarioImage-${scenario.id}" class="w-100 mb-2" alt="Scenario Image" src="${scenarioImageSrc}">` +
-                                `<h5 class="card-title">Scenario: ${scenario.name}</h5>` +
-                                `<p class="card-text">${scenario.description}</p>` +
-                                `<a href="/scenario_configuration.html?id=${scenario.id}" class="btn btn-primary">Edit</a>` +
-                                `</div>`;
+                    div.innerHTML =
+                        `<div class="card-body">` +
+                        `<img id="scenarioImage-${scenario.id}" class="w-100 mb-2" alt="Scenario Image" src="${scenarioImageSrc}">` +
+                        `<h5 class="card-title">Scenario: ${scenario.name}</h5>` +
+                        `<p class="card-text">${scenario.scenarioDesc}</p>` +
+                        `<a href="/scenario_configuration.html?id=${scenario.id}" class="btn btn-primary">Edit</a>` +
+                        `</div>`;
 
-                        container.appendChild(div);
-                    });
+                    container.appendChild(div);
+                });
 
+
+                const queryParams = new URLSearchParams(window.location.search);
+                const level = queryParams.get("level");
+
+                if (level) {
+                    const selectElement = $("#level-selection");
+                    selectElement.val(level);
+                    selectElement.change();
+
+                    $(".levelClass").each(function () {
+                        if ($(this).hasClass("level-" + level)) {
+                            $(this).removeClass("d-none")
+                        }
+                    })
+                } else {
                     $(".levelClass").each(function () {
                         if ($(this).hasClass("level-1")) {
                             $(this).removeClass("d-none")
                         }
                     })
-
-                } catch (error) {
-                    console.error("Error fetching scenarios:", error);
                 }
+
+            } catch (error) {
+                console.error("Error fetching scenarios:", error);
             }
+        }
 
-            $(document).ready(function () {
-                const level_string = {
-                    1: "Easy",
-                    2: "Medium",
-                    3: "Hard"
-                };
+        $(document).ready(function () {
+            const level_string = {
+                1: "Easy",
+                2: "Medium",
+                3: "Hard"
+            };
 
-                $("#level-selection").on("change", function () {
-                    let count = 0
-                    let level_value = $(this).val()
-                    $("#no-scenario").addClass("d-none")
-                    var newHref = "/scenario_configuration.html?levelValue=" + level_value + "&level=" + level_string[level_value];
-                    $('#add-scenario').attr('href', newHref);
+            $("#level-selection").on("change", function () {
+                let count = 0
+                let level_value = $(this).val()
+                $("#no-scenario").addClass("d-none")
+                var newHref = "/scenario_configuration.html?levelValue=" + level_value + "&level=" + level_string[level_value];
+                $('#add-scenario').attr('href', newHref);
 
-                    $(".card").each(function () {
-                        if (!$(this).hasClass("level-" + level_value) && !$(this).hasClass("d-none")) {
-                            $(this).addClass("d-none")
-                            console.log($(this))
-                        }
-                        else if ($(this).hasClass("level-" + level_value)) {
-                            count = count + 1
-                            $(this).removeClass("d-none")
-                        }
-                    })
-
-                    if (count == 0) {
-                        $("#no-scenario").removeClass("d-none")
+                $(".card").each(function () {
+                    if (!$(this).hasClass("level-" + level_value) && !$(this).hasClass("d-none")) {
+                        $(this).addClass("d-none")
+                    }
+                    else if ($(this).hasClass("level-" + level_value)) {
+                        count = count + 1
+                        $(this).removeClass("d-none")
                     }
                 })
 
-                fetchScenarios();
+                if (count == 0) {
+                    $("#no-scenario").removeClass("d-none")
+                }
+            })
 
-                document.getElementById('logoutButton').addEventListener('click', async () => {
-                    try {
-                        const response = await fetch('/api/logout', {
-                            method: 'GET',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            }
-                        });
+            fetchScenarios();
 
-                        const result = await response.json();
-                        if (response.ok) {
-                            window.location.href = '/index.html'; // Redirect to login page after logout
-                        } else {
-                            alert(result.message);
+            document.getElementById('logoutButton').addEventListener('click', async () => {
+                try {
+                    const response = await fetch('/api/logout', {
+                        method: 'GET',
+                        headers: {
+                            'Content-Type': 'application/json'
                         }
-                    } catch (error) {
-                        console.error('Error:', error);
-                        alert('An error occurred. Please try again.');
+                    });
+
+                    const result = await response.json();
+                    if (response.ok) {
+                        window.location.href = '/index.html';
+                    } else {
+                        alert(result.message);
                     }
-                });
+                } catch (error) {
+                    console.error('Error:', error);
+                    alert('An error occurred. Please try again.');
+                }
             });
-        </script>
+        });
+
+        window.onload = function () {
+            if (performance.navigation.type === performance.navigation.TYPE_RELOAD) {
+                const url = new URL(window.location);
+                url.search = '';
+                window.history.replaceState({}, document.title, url.toString());
+            }
+        };
+    </script>
 </body>
 
 </html>
