update scenario display

--- a/learneng_vite/chatting.html
+++ b/learneng_vite/chatting.html
@@ -106,7 +106,7 @@
             font-size: 1.5rem;
             color: #333;
             margin-top: 15px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             font-family: 'Courier New', Courier, monospace;
             font-weight: bold;
         }
@@ -273,8 +273,12 @@
         </div>
         <div class="title">Scenario 1 - Booking Room</div>
         <div class="icons">
-            <img src="page_photo/home.png" alt="Home">
-            <img src="page_photo/user.png" alt="Profile">
+            <a href="home.html">
+                <img src="page_photo/home.png" alt="Home">
+            </a>
+            <a href="index.html">
+                <img src="page_photo/user.png" alt="Profile">
+            </a>
         </div>
     </div>
 
@@ -318,8 +322,8 @@
                     <div class="modal-body" id="summarizedContent" style="max-height: 60vh; overflow-y: auto;">
                     </div>
                     <div class="modal-footer justify-content-center">
-                        <button type="button" id="btn-summarize_again"
-                            class="w-25 btn btn-summary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" id="btn-summarize_again" class="w-25 btn btn-summary"
+                            data-bs-dismiss="modal">Close</button>
                         <!-- <button type="button" class="btn btn-summary rounded-pill" data-bs-dismiss="modal">Close</button> -->
                     </div>
                 </div>
