--- a/learneng_vite/home.html
+++ b/learneng_vite/home.html
@@ -187,14 +187,18 @@
   <!-- Header -->
   <div class="header">
     <div class="icons">
-      <a href="welcome.html">
+      <a href="index.html">
         <img src="page_photo/back.png" alt="Back">
       </a>
     </div>
     <div class="title">Home</div>
     <div class="icons">
-      <img src="/page_photo/home.png" alt="Home">
-      <img src="/page_photo/user.png" alt="Profile">
+      <a href="home.html">
+        <img src="/page_photo/home.png" alt="Home">
+      </a>
+      <a href="index.html">
+        <img src="/page_photo/user.png" alt="Profile">
+      </a>
     </div>
   </div>
 
